--- a/Alt Designs/one/css.css
+++ b/Alt Designs/one/css.css
@@ -32,7 +32,8 @@ h1{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
+  padding: 30px 0 0 0;
 }
 .build-wrap{
   width: 100%;
@@ -49,7 +50,7 @@ h1{
   align-items: center;
   position: relative;
   width: 23%;
-  height: 70vh;
+  height: 80vh;
   margin: 10px;
   border: 1px solid rgba(0,0,0, .2);
   border-radius: 5px;
@@ -61,7 +62,7 @@ h1{
   justify-content: space-around;
   align-items: center;
   width: 50%;
-  height: 70vh;
+  height: 80vh;
   margin: 10px;
   border: 1px solid rgba(0,0,0, .2);
   border-radius: 5px;
@@ -75,7 +76,7 @@ h1{
   box-shadow: -1px 1px 6px rgba(0,0,0, .3);
   position: relative;
   width: 18%;
-  height: 70vh;
+  height: 80vh;
   margin: 10px;
   border: 1px solid rgba(0,0,0, .2);
   border-radius: 5px;
@@ -83,6 +84,8 @@ h1{
 .color-nav-1:hover{
   border: 1px solid rgba(0,0,0, .9);
   border-bottom: none;
+  background: rgba(0,0,0, 1);
+  color: white;
 }
 .color-nav-1{
   display: flex;
@@ -93,19 +96,24 @@ h1{
   border-top-right-radius: 3px;
   transition: all .4s;
   position: absolute;
-  width: 45%;
+  width: 32%;
+  font-size: .66rem;
+  font-weight: 300;
   height: 25px;
   top: -25px;
-  right: 3%;
+  right: 1%;
   border: 1px solid rgba(0,0,0, .2);
   border-bottom: none;
 }
 .color-nav-2:hover{
   border: 1px solid rgba(0,0,0, .9);
+  background: rgba(0,0,0, 1);
+  color: white;
   border-bottom: none;
 }
 .color-nav-2{
-  background: rgba(0,0,0, .1);
+  background: rgba(0,0,0, .7);
+  color: white;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -114,10 +122,35 @@ h1{
   border-top-right-radius: 3px;
   transition: all .4s;
   position: absolute;
-  width: 45%;
+  width: 32%;
+  font-size: .66rem;
+  font-weight: 300;
   height: 25px;
   top: -25px;
-  left: 3%;
+  left: 1%;
+  border: 1px solid rgba(0,0,0, .2);
+  border-bottom: none;
+}
+.color-nav-3:hover{
+  border: 1px solid rgba(0,0,0, .9);
+  border-bottom: none;
+  background: rgba(0,0,0, 1);
+  color: white;
+}
+.color-nav-3{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  letter-spacing: .1rem;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  transition: all .4s;
+  position: absolute;
+  width: 32%;
+  font-size: .66rem;
+  height: 25px;
+  top: -25px;
+  left: 34%;
   border: 1px solid rgba(0,0,0, .2);
   border-bottom: none;
 }
@@ -176,6 +209,7 @@ h1{
   height: 95%;
 }
 .suit-display-img{
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -223,7 +257,7 @@ h1{
   margin: 10px;
   padding: 5px 10px;
   border-radius: 3px;
-  width: 150px;
+  width: 180px;
   font-size: 1rem;
   letter-spacing: .1rem;
   text-align: center;
@@ -265,6 +299,41 @@ h1{
 .color-single-wrap{
   width: 100%;
   display: flex;
+}
+#right-upper-arm-SVG{
+  fill: #94d31b;
+}
+@import "compass/css3";
+
+.logo {
+  width: 200px;
+  height: 164px;
+}
+.upper-left-arm-svg{
+
+}
+.suit-images{
+  position: absolute;
+  top:0;
+  width: 245px;
+  height: 100%;
+}
+#upper-left-arm-svg{
+  width: 27.9px;
+  position: absolute;
+  top: 54px;
+  left: 160.7px;
+}
+#upper-right-arm-svg{
+  width: 27.9px;
+  position: absolute;
+  top: 53px;
+  left: 55.7px;
+}
+.suit-titles{
+  position: absolute;
+  top: 5px;
+  font-size: 1.5rem;
 }
 
 @media screen and (max-width: 780px) {
