--- a/css.css
+++ b/css.css
@@ -1,94 +1,29 @@
-select {
-   -webkit-appearance: none;
-   -moz-appearance: none;
-   appearance: none;       /* remove default arrow */
-   background-image: url(...);   /* add custom arrow */
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600');
+main *{
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 200 !important;
+  font-size: 12px;
 }
-.build-wrap{
-  width: 100%;
-  height: 90vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+h1{
+  /*font-weight: 200 !important;*/
+  font-size: 2rem;
 }
-.side-form{
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  height: 100%;
-  width: 20%;
-  border: 1px solid black;
-}
-.side-form h1{
-  font-size: 18px;
-}
-.suit-images{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  width: 50%;
-  border: 1px solid black;
-}
-.suit-outline h4{
-  margin: 0px 0 -60px 0px;
-}
-.suit-outline{
-  position: relative;
-  width: 200px;
-  height: 400px;
+main{
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: 100vh;
 }
-.suit-outline-front{
-  width: 100%;
-  height: 100%;
-  background: url('./img/summer2/outline-front.png');
-  background-position: center;
-  background-size: contain;
-  background-repeat: no-repeat;
+.enter:hover{
+  background: black;
+  color: white;
 }
-.suit-outline img{
-  width: 85%;
+.enter{
+  padding: 10px 35px;
+  background: white;
+  font-size: 2rem;
+  border: 2PX SOLID black;
+  transition: all .35s;
+  border-radius: 3px;
 }
-.suit-piece{
-  position: absolute;
-}
-.select-field{
-  margin: 0 0 0 10px;
-  padding: 1px;
-  width: 80%;
-}
-.select-wrap h4{
-  margin: 5px;
-  font-size: 10px;
-}
-.select-wrap{
-  margin: 5px;
-  width: 95%;
-  display: flex;
-  flex-direction: column;
-}
-/*Suit Piece #*/
-#front-left-arm{
-  width: 20.1%;
-  left: 14px;
-  top: 105px;
-}
-#front-left-sholder{
-  width: 18%;
-  left: 48px;
-  top: 94px;
-}
-#front-left-collar{
-  width: 11%;
-  left: 79px;
-  top: 84px;
-}
-/*Filters*/
-.red {filter: hue-rotate(10deg);}
-.green {-webkit-filter: hue-rotate(180deg); filter: hue-rotate(180deg)}
-.blue {-webkit-filter: hue-rotate(180deg); filter: hue-rotate(180deg)}
