--- a/Alt Designs/one/css.css
+++ b/Alt Designs/one/css.css
@@ -209,26 +209,26 @@ h1{
   height: 60%;
 }
 .suit-display-img img{
-  margin: 260px 0 0 -50px;
+  margin: 246px 0 0 -50px;
   height: 60%;
 }
 #front-right-wing{
   height: 29%;
-position: absolute;
-top: 299px;
-left: 149px;
+  position: absolute;
+  top: 302px;
+  left: 151px;
 }
 #front-left-wing{
   height: 32%;
   position: absolute;
-  top: 288px;
-  left: -43px;
+  top: 291px;
+  left: -52px;
 }
 #back-left-stripe{
   position: absolute;
-  height: 49%;
-  top: 232px;
-  left: 38px;
+      height: 49%;
+      top: 232px;
+      left: 35px;
 }
 #back-right-stripe{
   height: 44.6%;
@@ -240,42 +240,42 @@ left: 149px;
   position: absolute;
   height: 15.7%;
   top: 253px;
-  left: 164px;
+  left: 167px;
 }
 #back-left-arm{
   position: absolute;
   height: 20%;
-      top: 304px;
-      left: -68px;
+  top: 309px;
+  left: -79px;
 }
 #back-back{
   position: absolute;
   height: 51.5%;
   top: 229px;
-  left: 53px;
+  left: 51px;
 }
 #back-collar{
   position: absolute;
   height: 4.1%;
-  top: 212px;
-  left: 80px;
+  top: 210px;
+  left: 79px;
 }
 #back-left-top-arm{
   position: absolute;
   height: 17%;
   top: 241px;
-  left: -16px;
+  left: -23px;
 }
 #back-righ-top-arm{
   position: absolute;
   height: 19.7%;
-  top: 309px;
-  left: 214px;
+  top: 314px;
+  left: 221px;
 }
 #front-stitching{
   position: absolute;
-  height: 52%;
-  margin: -50px 0 0 50px;
+  height: 49%;
+  margin: -62px 0 0 50px
 }
 .single-suit-image{
   position: absolute;
