--- a/Alt Designs/one/css.css
+++ b/Alt Designs/one/css.css
@@ -205,10 +205,12 @@ h1{
   border: 1px solid rgba(0,0,0, .3);
 }
 .suit-display-img .img2{
+  position: relative;
   margin: -80px 0 0 100px;
   height: 60%;
 }
 .suit-display-img img{
+  position: relative;
   margin: 246px 0 0 -50px;
   height: 60%;
 }
