--- a/Alt Designs/one/css.css
+++ b/Alt Designs/one/css.css
@@ -278,7 +278,7 @@ h1{
   z-index: 0;
   position: absolute;
   height: 49%;
-  margin: -12px 0 0 50px
+  margin: 44px 0 0 0px;
 }
 .single-suit-image{
   z-index: 1;
@@ -761,11 +761,11 @@ h1{
   top: 314px;
   left: 221px;
 }
-#front-stitching{
+/*#front-stitching{
   position: absolute;
   height: 49%;
   margin: -62px 0 0 123px;
-}
+}*/
 .single-suit-image{
   position: absolute;
   width: 20%;
