--- a/Alt Designs/one/css.css
+++ b/Alt Designs/one/css.css
@@ -700,7 +700,9 @@ h1{
   height: 60%;
 }
 .suit-display-img img{
-  margin: 373px 0 0 -161px;
+  position: absolute;
+top: 119px;
+left: -67px;
   height: 60%;
 }
 #front-right-wing{
