--- a/Alt Designs/one/css.css
+++ b/Alt Designs/one/css.css
@@ -699,7 +699,11 @@ h1{
   margin: -80px 0 0 100px;
   height: 60%;
 }
+.indexOne{
+  z-index: 1;
+}
 .suit-display-img img{
+  z-index: 0;
   position: absolute;
 top: 119px;
 left: -67px;
