this is the test

--- a/Alt Designs/one/css.css
+++ b/Alt Designs/one/css.css
@@ -503,499 +503,12 @@ left: -82px;
   font-size: 1.5rem;
 }
 
-@media screen and (max-width: 780px) {
-  @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600');
-main{
-  font-family: 'Source Sans Pro', sans-serif;
-  font-weight: 300 !important;
-  font-size: 12px;
-}
-main{
-  background: url('https://cdn.shutterstock.com/shutterstock/videos/14097236/thumb/1.jpg?i10c=img.resize(height:160)');
-  background-size: cover;
-  background-position: center bottom;
-}
-.build-full{
-  background: rgba(255,255,255, .8);
-}
-h1{
-  font-size: 2rem;
-  width: 30%;
-  text-align: center;
-  border-bottom: 1px solid rgba(0,0,0, .1);
-  padding: 0 0 3px 0;
-}
-.build-full p{
-  padding: 5px 0 0 0;
-  letter-spacing: .1rem;
-}
-.build-full h1{
- margin:0px;
-}
-.build-full{
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  padding: 30px 0 0 0;
-}
-.build-wrap{
-  width: 100%;
-  max-height: 90vh;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  margin: 0 0 0 40px;
-}
-.color-picker{
-  position: relative;
-  box-shadow: -1px 1px 6px rgba(0,0,0, .3);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  width: 23%;
-  height: 80vh;
-  margin: 10px;
-  border: 1px solid rgba(0,0,0, .2);
-  border-radius: 5px;
-}
-.suit-display{
-  box-shadow: -1px 1px 6px rgba(0,0,0, .3);
-  position: relative;
-  display: flex;
-  /* flex-direction: column; */
-  justify-content: space-around;
-  align-items: center;
-  width: 50%;
-  height: 80vh;
-  margin: 10px;
-  border: 1px solid rgba(0,0,0, .2);
-  border-radius: 5px;
-}
-.contact-form{
-  padding: 10px 0 0 0;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  flex-direction: column;
-  box-shadow: -1px 1px 6px rgba(0,0,0, .3);
-  position: relative;
-  width: 18%;
-  height: 80vh;
-  margin: 10px;
-  border: 1px solid rgba(0,0,0, .2);
-  border-radius: 5px;
-}
-.color-nav-1:hover{
-  border: 1px solid rgba(0,0,0, .9);
-  border-bottom: none;
-  background: rgba(0,0,0, 1);
-  color: white;
-}
-.color-nav-1{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  letter-spacing: .1rem;
-  border-top-left-radius: 3px;
-  border-top-right-radius: 3px;
-  transition: all .4s;
-  position: absolute;
-  width: 32%;
-  font-size: .66rem;
-  font-weight: 300;
-  height: 25px;
-  top: -25px;
-  right: 1%;
-  border: 1px solid rgba(0,0,0, .2);
-  border-bottom: none;
-}
-.color-nav-2:hover{
-  border: 1px solid rgba(0,0,0, .9);
-  background: rgba(0,0,0, 1);
-  color: white;
-  border-bottom: none;
-}
-.color-nav-2{
-  background: rgba(0,0,0, .7);
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  letter-spacing: .1rem;
-  border-top-left-radius: 3px;
-  border-top-right-radius: 3px;
-  transition: all .4s;
-  position: absolute;
-  width: 32%;
-  font-size: .66rem;
-  font-weight: 300;
-  height: 25px;
-  top: -25px;
-  left: 1%;
-  border: 1px solid rgba(0,0,0, .2);
-  border-bottom: none;
-}
-.color-nav-3:hover{
-  border: 1px solid rgba(0,0,0, .9);
-  border-bottom: none;
-  background: rgba(0,0,0, 1);
-  color: white;
-}
-.color-nav-3{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  letter-spacing: .1rem;
-  border-top-left-radius: 3px;
-  border-top-right-radius: 3px;
-  transition: all .4s;
-  position: absolute;
-  width: 32%;
-  font-size: .66rem;
-  height: 25px;
-  top: -25px;
-  left: 34%;
-  border: 1px solid rgba(0,0,0, .2);
-  border-bottom: none;
-}
-.color-picker-colors{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: flex-start;
-  width: 95%;
-  height: 100%;
-}
-.color-picker-measurements{
-  display: none;
-}
-.color-single img:hover{
-  opacity: 1;
-}
-.color-single:hover{
-  border:1px solid rgba(0,0,0, 1);
-}
-.color-single{
-  transition: all .4s;
-  position: relative;
-  display: flex;
-  align-items: center;
-  margin: 20px 2% 0 2%;
-  width: 45%;
-  height: 25px;
-  border-radius: 3px;
-  border: 1px solid rgba(0,0,0, .5);
-}
-.color-single h4{
-  position: absolute;
-  top: -15px;
-  margin: 0 0 0 1px;
-}
-.color-single p{
-  margin: -5px 0 0 4px;
-}
-.color-single img{
-  position: absolute;
-  right: 5px;
-  top: 5px;
-  width: 15px;
-  opacity: .6;
-  transition: all .4s;
-}
-.color-single-display{
-  width: 15px;
-  height: 15px;
-  margin: 0 0 0 5px;
-  border: 1px solid rgba(0,0,0, .3);
-}
-.suit-display-img .img2{
-  margin: -80px 0 0 100px;
-  height: 60%;
-}
-.indexOne{
-  z-index: 3;
-}
-.suit-display-img img{
-  position: absolute;
-top: 119px;
-left: -67px;
-  height: 60%;
-}
-#front-right-wing{
-  z-index: 2 !important;
-  height: 29%;
-  position: absolute;
-  top: 304px;
-  left: 153px;
-}
-#front-left-wing{
-  z-index: 2 !important;
-  height: 32%;
-  position: absolute;
-  top: 291px;
-  left: -52px;
-}
-#back-left-stripe{
-  z-index: 2 !important;
-  position: absolute;
-      height: 49%;
-      top: 232px;
-      left: 35px;
-}
-#back-right-stripe{
-  z-index: 2 !important;
-  height: 44.6%;
-  position: absolute;
-  top: 244px;
-  left: 137px;
-}
-#back-right-arm{
-  z-index: 2 !important;
-  position: absolute;
-  height: 15.7%;
-  top: 255px;
-  left: 169px;
-}
-#back-left-arm{
-  z-index: 2 !important;
-  position: absolute;
-  height: 20%;
-  top: 309px;
-  left: -79px;
-}
-#back-back{
-  z-index: 2 !important;
-  position: absolute;
-  height: 51.5%;
-  top: 229px;
-  left: 51px;
-}
-#back-collar{
-  z-index: 2 !important;
-  position: absolute;
-  height: 4.1%;
-  top: 210px;
-  left: 79px;
-}
-#back-left-top-arm{
-  z-index: 2 !important;
-  position: absolute;
-  height: 17%;
-  top: 241px;
-  left: -23px;
-}
-#back-righ-top-arm{
-  z-index: 2 !important;
-  position: absolute;
-  height: 19.7%;
-  top: 314px;
-  left: 221px;
-}
-.single-suit-image{
-  position: absolute;
-  width: 20%;
-}
-#front-write-wing{
-  z-index: 2 !important;
-  left: 220px;
-  top: 123px;
-  width: 41%;
-}
-#front-write-wing2{
-  z-index: 2 !important;
-  left: 220px;
-  top: 123px;
-  width: 41%;
-}
-#front-chest-left{
-  z-index: 2 !important;
-  top: 70px;
-  left: 132px;
-  width: 17.5%;
-}
-#front-chest-right{
-  z-index: 2 !important;
-  top: 61px;
-  left: 168px;
-  width: 23.2%;
-}
-#front-chest-around{
-  z-index: 2 !important;
-  top: 69px;
-  left: 124px;
-  width: 48.2%;
-}
-#front-right-arm-top{
-  z-index: 2 !important;
-  top: 77px;
-  left: 234px;
-  width: 24.5%;
-}
-#front-bottom-right-arm{
-  z-index: 2 !important;
-  top: 120px;
-  left: 289px;
-  width: 22%;
-}
-#front-collar{
-  z-index: 2 !important;
-  top: 47px;
-  left: 156px;
-  width: 18%;
-}
-#front-left-top-arm{
-  z-index: 2 !important;
-  top: 80px;
-  left: 76px;
-}
-#front-left-arm{
-  z-index: 2 !important;
-  top: 101px;
-  left: 3px;
-  width: 26%;
-
-}
-#front-left-top-wing{
-  z-index: 2 !important;
-  top: 118px;
-  left: 20px;
-  width: 46%;
-}
-
-.suit-display-img{
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 245px;
-  height: 420px;
-}
 @-moz-document url-prefix() {
   #front-stitching {
       position: absolute;
       height: 49%;
       margin: -126px 0 0 101px;
   }
-
-
-}
-.builder-input-half:first-child{
-  margin: 0 0 0 2%;
-}
-.builder-input-full{
-  width: 95%;
-}
-.builder-input-half{
-  width: 43%;
-}
-.builder-input{
-  margin: 5px;
-  border: 1px solid rgba(0,0,0, .4);
-  padding: 3px;
-  border-radius: 3px;
-}
-.cf-input-submit:hover{
-  background: black;
-  color: white;
-}
-.cf-input-submit{
-  transition: all .4s;
-  margin: 10px;
-  border: 1px solid rgba(0,0,0, .4);
-  padding: 5px 10px;
-  border-radius: 3px;
-}
-.cf-input{
-  width: 90%;
-}
-.contact-form p{
-
-}
-.builder-btn:hover{
-  background: BLACK;
-  color: white;
-}
-.builder-btn{
-  transition: all .4s;
-  margin: 10px;
-  padding: 5px 10px;
-  border-radius: 3px;
-  width: 180px;
-  font-size: 1rem;
-  letter-spacing: .1rem;
-  text-align: center;
-  border: 1px solid rgba(0,0,0, .4);
-}
-.builder-btns{
-  top: 5px;
-  position: absolute;
-  display: flex;
-  padding: 5px 15px;
-}
-/*Dropdowns*/
-
-.picker-dropdown{
-  position: fixed;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  display: none;
-  width: 21%;
-  border: 1px solid black;
-  border-radius: 3px;
-  top:15.45%;
-  left: 3.2%;
-  height: auto;
-  z-index: 1;
-  background: white;
-  padding: 2px;
-  box-shadow: -1px 1px 6px rgba(0,0,0, .3);
-}
-.color-single-dropdown{
-  width: 90%;
-  z-index: 8;
-  margin: 3px;
-}
-.picker-dropdown-p{
-  margin: 5px !important;
-}
-.color-single-wrap{
-  width: 100%;
-  display: flex;
-}
-#right-upper-arm-SVG{
-  fill: #94d31b;
-}
-@import "compass/css3";
-
-.logo {
-  width: 200px;
-  height: 164px;
-}
-.upper-left-arm-svg{
-
-}
-.suit-images{
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 5;
-  top:0;
-  width: 245px;
-  margin: 0 0 0 72px;
-  height: 100%;
-}
-
-
-  width: 91.9px;
-  position: absolute;
-  top: 43px;
-  left: 76.7px;
 }
 .suit-titles{
   position: absolute;
@@ -1013,9 +526,23 @@ left: -67px;
   top:210px;
   left: 130px;
 }
+#form-front-info input{
+  padding: 5px;
+  font-size: 2rem;
+}
+#form-front-info{
+  padding: 5px;
+  height: 10vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
   @media screen and (max-width: 780px) {
     .zDex-1{
       z-index: 2 !important;
+    }
+    #build-wrapp{
+      margin-bottom: 40px;
     }
     .build-wrap{
       flex-wrap: wrap;
@@ -1066,6 +593,6 @@ left: -67px;
       position: absolute;
     }
     #fthisfinbackimage{
-      margin-left: 0 -200px 0 0;
+      margin-left: 21px;
     }
   }
