--- a/Alt Designs/two/css.css
+++ b/Alt Designs/two/css.css
@@ -1,4 +1,116 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600');
+.cf-input p{
+    margin: -2px 0 0 0;
+}
+
+.admin-color-control{
+    display:none;
+}
+.popup-confirm-section{
+  position: fixed;
+  top:0;
+  left: 0;
+  height: 100vh;
+  width: 100%;
+  background: rgba(0,0,0, .7);
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#pop-confirm-wrap-p{
+  padding: 10px;
+  margin: -40px 0 0 0;
+  font-size: 1rem;
+}
+.pop-confirm-wrap{
+  position: absolute;
+  top: 20%;
+  left: 15%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  width: 70%;
+  height: 60vh;
+  background: white;
+  z-index: 15;
+  border-radius: 5px;
+}
+#blue-check-mark{
+  transition: all .6s;
+  opacity: 0;
+  position: absolute;
+  top: 55%;
+  left: 45%;
+  width: 80px;
+}
+.pop-confirm-info p{
+  padding: 10px;
+  font-size: 1rem;
+}
+.pop-confirm-btns{
+  display: flex;
+  width: 100%;
+  margin: 110px 0 0 0;
+}
+.cont-edit:hover{
+  font-size: 1rem;
+  background: white;
+  color: black;
+}
+.cont-edit{
+  position: absolute;
+  transition: all .4s;
+  padding: 5px 15px;
+  border: 1px solid rgba(0,0,0, .5);
+  border-radius: 3px;
+  margin: 1.9% 0 0 -5.5% ;
+  background: black;
+  color: white;
+}
+.vid-btn:hover{
+  background: white;
+  color: #50aaed;
+}
+.vid-btn{
+  margin:10px auto 40px;
+  transition: all .4s;
+  width: 35%;
+  text-align: center;
+  color: white;
+  font-size: 1.2rem;
+  border: 2px solid #50aaed;
+  border-radius: 3px;
+  padding: 10px 25px;
+  background: #50aaed;
+}
+.pop-confirm-info h4{
+  font-size: 2rem;
+}
+.pop-confirm-info{
+  padding: 10px;
+}
+#color-picker-colors-back{
+  display: none;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start;
+  width: 95%;
+  height: 100%;
+}
+.measurement-wrap h4{
+    font-size: .8rem;
+}
+.active-black-background{
+  color: white;
+  background: black;
+}
+.active-white-background{
+  color: black;
+  background: white;
+}
+
 main{
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 300 !important;
@@ -112,8 +224,6 @@ h1{
   border-bottom: none;
 }
 .color-nav-2{
-  background: rgba(0,0,0, .7);
-  color: white;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -160,10 +270,35 @@ h1{
   justify-content: center;
   align-items: flex-start;
   width: 95%;
+  padding: 20px 0 0 0 ;
   height: 100%;
+}
+.measurement-set{
+  display: flex;
+
 }
 .color-picker-measurements{
   display: none;
+  flex-direction: column;
+  flex-wrap: wrap;
+  margin: 0 0 0 0px;
+  width: 100%;
+}
+.single-measure-input{
+  border-radius: 3px;
+  border: 1px solid rgba(0,0,0, .4);
+  margin: 5px;
+  padding: 3px;
+  width: 80%;
+  display: inline-block;
+}
+.measurement-wrap h4{
+  margin: 0 0 0 8px;
+}
+.measurement-wrap{
+  display: flex;
+  flex-direction: column;
+  width: 50%;
 }
 .color-single img:hover{
   opacity: 1;
@@ -186,6 +321,7 @@ h1{
   position: absolute;
   top: -15px;
   margin: 0 0 0 1px;
+  font-size: .8rem;
 }
 .color-single p{
   margin: -5px 0 0 4px;
@@ -214,61 +350,71 @@ h1{
   margin: 246px 0 0 -50px;
   height: 60%;
 }
-#front-right-wing{
+#back-right-wing{
+  z-index: 1;
   height: 29%;
   position: absolute;
   top: 304px;
   left: 153px;
 }
-#front-left-wing{
+#back-left-wing{
+  z-index: 1;
   height: 32%;
   position: absolute;
   top: 291px;
   left: -52px;
 }
 #back-left-stripe{
+  z-index: 1;
   position: absolute;
       height: 49%;
       top: 232px;
       left: 35px;
 }
 #back-right-stripe{
+  z-index: 1;
   height: 44.6%;
   position: absolute;
   top: 244px;
   left: 137px;
 }
 #back-right-arm{
+  z-index: 1;
   position: absolute;
   height: 15.7%;
   top: 255px;
   left: 169px;
 }
 #back-left-arm{
+  z-index: 1;
   position: absolute;
   height: 20%;
   top: 309px;
   left: -79px;
 }
 #back-back{
+  z-index: 1;
   position: absolute;
   height: 51.5%;
   top: 229px;
   left: 51px;
 }
 #back-collar{
+  z-index: 1;
   position: absolute;
   height: 4.1%;
   top: 210px;
   left: 79px;
 }
 #back-left-top-arm{
+  z-index: 1;
   position: absolute;
   height: 17%;
   top: 241px;
   left: -23px;
 }
 #back-righ-top-arm{
+  z-index: 1;
   position: absolute;
   height: 19.7%;
   top: 314px;
@@ -278,8 +424,9 @@ h1{
   z-index: 0;
   position: absolute;
   height: 49%;
-      top: 45px;
-      left: 0;
+  top: 44px;
+left: 0px;
+
 }
 .single-suit-image{
   z-index: 1;
@@ -336,10 +483,61 @@ h1{
   width: 26%;
 
 }
+#back-stitching{
+  width: 148%;
+position: absolute;
+top: 207px;
+left: -82px;
+}
 #front-left-top-wing{
   top: 118px;
   left: 20px;
   width: 46%;
+}
+#front-left-elbow{
+  z-index: 5;
+  position: absolute;
+  width: 6.65%;
+  left: 62px;
+  top: 96px;
+}
+#front-right-elbow{
+  z-index: 5;
+      position: absolute;
+      width: 11.4%;
+      left: 279px;
+      top: 110px;
+}
+#back-left-elbow{
+  position: absolute;
+    width: 14.7%;
+    z-index: 6;
+    top: 295px;
+    left: -36px;
+}
+#back-right-elbow{
+  position: absolute;
+  width: 13.5%;
+  z-index: 6;
+  top: 301px;
+  left: 212px;
+}
+.price-banner-wrap h2{
+font-size: 1.3rem;
+}
+.price-banner-wrap{
+  transition: all .8s;
+  position: absolute;
+  left:-350px;
+  top: 60px;
+  width: 26%;
+  height: 40px;
+  background: #50aaed;
+  color: white;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 10px 20px;
 }
 .suit-display-img{
   position: relative;
@@ -417,6 +615,7 @@ h1{
   position: fixed;
   display: flex;
   flex-direction: column;
+
   align-items: center;
   display: none;
   width: 21%;
@@ -485,488 +684,12 @@ h1{
   font-size: 1.5rem;
 }
 
-@media screen and (max-width: 780px) {
-  @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600');
-main{
-  font-family: 'Source Sans Pro', sans-serif;
-  font-weight: 300 !important;
-  font-size: 12px;
-}
-main{
-  background: url('https://cdn.shutterstock.com/shutterstock/videos/14097236/thumb/1.jpg?i10c=img.resize(height:160)');
-  background-size: cover;
-  background-position: center bottom;
-}
-.build-full{
-  background: rgba(255,255,255, .8);
-}
-h1{
-  font-size: 2rem;
-  width: 30%;
-  text-align: center;
-  border-bottom: 1px solid rgba(0,0,0, .1);
-  padding: 0 0 3px 0;
-}
-.build-full p{
-  padding: 5px 0 0 0;
-  letter-spacing: .1rem;
-}
-.build-full h1{
- margin:0px;
-}
-.build-full{
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  padding: 30px 0 0 0;
-}
-.build-wrap{
-  width: 100%;
-  max-height: 90vh;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  margin: 0 0 0 40px;
-}
-.color-picker{
-  position: relative;
-  box-shadow: -1px 1px 6px rgba(0,0,0, .3);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  width: 23%;
-  height: 80vh;
-  margin: 10px;
-  border: 1px solid rgba(0,0,0, .2);
-  border-radius: 5px;
-}
-.suit-display{
-  box-shadow: -1px 1px 6px rgba(0,0,0, .3);
-  position: relative;
-  display: flex;
-  /* flex-direction: column; */
-  justify-content: space-around;
-  align-items: center;
-  width: 50%;
-  height: 80vh;
-  margin: 10px;
-  border: 1px solid rgba(0,0,0, .2);
-  border-radius: 5px;
-}
-.contact-form{
-  padding: 10px 0 0 0;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  flex-direction: column;
-  box-shadow: -1px 1px 6px rgba(0,0,0, .3);
-  position: relative;
-  width: 18%;
-  height: 80vh;
-  margin: 10px;
-  border: 1px solid rgba(0,0,0, .2);
-  border-radius: 5px;
-}
-.color-nav-1:hover{
-  border: 1px solid rgba(0,0,0, .9);
-  border-bottom: none;
-  background: rgba(0,0,0, 1);
-  color: white;
-}
-.color-nav-1{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  letter-spacing: .1rem;
-  border-top-left-radius: 3px;
-  border-top-right-radius: 3px;
-  transition: all .4s;
-  position: absolute;
-  width: 32%;
-  font-size: .66rem;
-  font-weight: 300;
-  height: 25px;
-  top: -25px;
-  right: 1%;
-  border: 1px solid rgba(0,0,0, .2);
-  border-bottom: none;
-}
-.color-nav-2:hover{
-  border: 1px solid rgba(0,0,0, .9);
-  background: rgba(0,0,0, 1);
-  color: white;
-  border-bottom: none;
-}
-.color-nav-2{
-  background: rgba(0,0,0, .7);
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  letter-spacing: .1rem;
-  border-top-left-radius: 3px;
-  border-top-right-radius: 3px;
-  transition: all .4s;
-  position: absolute;
-  width: 32%;
-  font-size: .66rem;
-  font-weight: 300;
-  height: 25px;
-  top: -25px;
-  left: 1%;
-  border: 1px solid rgba(0,0,0, .2);
-  border-bottom: none;
-}
-.color-nav-3:hover{
-  border: 1px solid rgba(0,0,0, .9);
-  border-bottom: none;
-  background: rgba(0,0,0, 1);
-  color: white;
-}
-.color-nav-3{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  letter-spacing: .1rem;
-  border-top-left-radius: 3px;
-  border-top-right-radius: 3px;
-  transition: all .4s;
-  position: absolute;
-  width: 32%;
-  font-size: .66rem;
-  height: 25px;
-  top: -25px;
-  left: 34%;
-  border: 1px solid rgba(0,0,0, .2);
-  border-bottom: none;
-}
-.color-picker-colors{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: flex-start;
-  width: 95%;
-  height: 100%;
-}
-.color-picker-measurements{
-  display: none;
-}
-.color-single img:hover{
-  opacity: 1;
-}
-.color-single:hover{
-  border:1px solid rgba(0,0,0, 1);
-}
-.color-single{
-  transition: all .4s;
-  position: relative;
-  display: flex;
-  align-items: center;
-  margin: 20px 2% 0 2%;
-  width: 45%;
-  height: 25px;
-  border-radius: 3px;
-  border: 1px solid rgba(0,0,0, .5);
-}
-.color-single h4{
-  position: absolute;
-  top: -15px;
-  margin: 0 0 0 1px;
-}
-.color-single p{
-  margin: -5px 0 0 4px;
-}
-.color-single img{
-  position: absolute;
-  right: 5px;
-  top: 5px;
-  width: 15px;
-  opacity: .6;
-  transition: all .4s;
-}
-.color-single-display{
-  width: 15px;
-  height: 15px;
-  margin: 0 0 0 5px;
-  border: 1px solid rgba(0,0,0, .3);
-}
-.suit-display-img .img2{
-  margin: -80px 0 0 100px;
-  height: 60%;
-}
-.suit-display-img img{
-  margin: 373px 0 0 -161px;
-  height: 60%;
-}
-#front-right-wing{
-  height: 29%;
-  position: absolute;
-  top: 304px;
-  left: 153px;
-}
-#front-left-wing{
-  height: 32%;
-  position: absolute;
-  top: 291px;
-  left: -52px;
-}
-#back-left-stripe{
-  position: absolute;
-      height: 49%;
-      top: 232px;
-      left: 35px;
-}
-#back-right-stripe{
-  height: 44.6%;
-  position: absolute;
-  top: 244px;
-  left: 137px;
-}
-#back-right-arm{
-  position: absolute;
-  height: 15.7%;
-  top: 255px;
-  left: 169px;
-}
-#back-left-arm{
-  position: absolute;
-  height: 20%;
-  top: 309px;
-  left: -79px;
-}
-#back-back{
-  position: absolute;
-  height: 51.5%;
-  top: 229px;
-  left: 51px;
-}
-#back-collar{
-  position: absolute;
-  height: 4.1%;
-  top: 210px;
-  left: 79px;
-}
-#back-left-top-arm{
-  position: absolute;
-  height: 17%;
-  top: 241px;
-  left: -23px;
-}
-#back-righ-top-arm{
-  position: absolute;
-  height: 19.7%;
-  top: 314px;
-  left: 221px;
-}
-/*#front-stitching{
-  position: absolute;
-  height: 49%;
-  margin: -62px 0 0 123px;
-}*/
-.single-suit-image{
-  position: absolute;
-  width: 20%;
-}
-#front-write-wing{
-  left: 220px;
-  top: 123px;
-  width: 41%;
-}
-#front-write-wing2{
-  left: 220px;
-  top: 123px;
-  width: 41%;
-}
-#front-chest-left{
-  top: 70px;
-  left: 132px;
-  width: 17.5%;
-}
-#front-chest-right{
-  top: 61px;
-  left: 168px;
-  width: 23.2%;
-}
-#front-chest-around{
-  top: 69px;
-  left: 124px;
-  width: 48.2%;
-}
-#front-right-arm-top{
-  top: 77px;
-  left: 234px;
-  width: 24.5%;
-}
-#front-bottom-right-arm{
-  top: 120px;
-  left: 289px;
-  width: 22%;
-}
-#front-collar{
-  top: 47px;
-  left: 156px;
-  width: 18%;
-}
-#front-left-top-arm{
-  top: 80px;
-  left: 76px;
-}
-#front-left-arm{
-  top: 101px;
-  left: 3px;
-  width: 26%;
-
-}
-#front-left-top-wing{
-  top: 118px;
-  left: 20px;
-  width: 46%;
-}
-.suit-display-img{
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 245px;
-  height: 420px;
-}
 @-moz-document url-prefix() {
   #front-stitching {
       position: absolute;
       height: 49%;
       margin: -126px 0 0 101px;
   }
-
-
-}
-.builder-input-half:first-child{
-  margin: 0 0 0 2%;
-}
-.builder-input-full{
-  width: 95%;
-}
-.builder-input-half{
-  width: 43%;
-}
-.builder-input{
-  margin: 5px;
-  border: 1px solid rgba(0,0,0, .4);
-  padding: 3px;
-  border-radius: 3px;
-}
-.cf-input-submit:hover{
-  background: black;
-  color: white;
-}
-.cf-input-submit{
-  transition: all .4s;
-  margin: 10px;
-  border: 1px solid rgba(0,0,0, .4);
-  padding: 5px 10px;
-  border-radius: 3px;
-}
-.cf-input{
-  width: 90%;
-}
-.contact-form p{
-
-}
-.builder-btn:hover{
-  background: BLACK;
-  color: white;
-}
-.builder-btn{
-  transition: all .4s;
-  margin: 10px;
-  padding: 5px 10px;
-  border-radius: 3px;
-  width: 180px;
-  font-size: 1rem;
-  letter-spacing: .1rem;
-  text-align: center;
-  border: 1px solid rgba(0,0,0, .4);
-}
-.builder-btns{
-  top: 5px;
-  position: absolute;
-  display: flex;
-  padding: 5px 15px;
-}
-/*Dropdowns*/
-
-.picker-dropdown{
-  position: fixed;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  display: none;
-  width: 21%;
-  border: 1px solid black;
-  border-radius: 3px;
-  top:15.45%;
-  left: 3.2%;
-  height: auto;
-  z-index: 1;
-  background: white;
-  padding: 2px;
-  box-shadow: -1px 1px 6px rgba(0,0,0, .3);
-}
-.color-single-dropdown{
-  width: 90%;
-  z-index: 8;
-  margin: 3px;
-}
-.picker-dropdown-p{
-  margin: 5px !important;
-}
-.color-single-wrap{
-  width: 100%;
-  display: flex;
-}
-#right-upper-arm-SVG{
-  fill: #94d31b;
-}
-@import "compass/css3";
-
-.logo {
-  width: 200px;
-  height: 164px;
-}
-.upper-left-arm-svg{
-
-}
-.suit-images{
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 5;
-  top:0;
-  width: 245px;
-  margin: 0 0 0 72px;
-  height: 100%;
-}
-#upper-left-arm-svg{
-  width: 27.9px;
-  position: absolute;
-  top: 54px;
-  left: 160.7px;
-}
-#upper-right-arm-svg{
-  width: 27.9px;
-  position: absolute;
-  top: 53px;
-  left: 55.7px;
-}
-#sholders-svg{
-  width: 91.9px;
-  position: absolute;
-  top: 43px;
-  left: 76.7px;
 }
 .suit-titles{
   position: absolute;
@@ -974,10 +697,46 @@ h1{
   font-size: 1.5rem;
   /* margin: 200px; */
 }
-
+.zDex-1{
+  z-index: 2 !important;
+}
+#fthisfinbackimage{
+  margin-left: -40px;
+}
+#suit-titles-back{
+  top:210px;
+  left: 130px;
+}
+#form-front-info input{
+  padding: 5px;
+  font-size: 2rem;
+}
+#form-front-info{
+  padding: 5px;
+  height: 10vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#back-piping{
+  position: absolute;
+  top: 233px;
+  left: 49px;
+  width: 43.6%;
+  z-index: 6 !important;
+}
   @media screen and (max-width: 780px) {
+    .zDex-1{
+      z-index: 2 !important;
+    }
+    .picker-dropdown{
+        width: 80%;
+    }
+    #build-wrapp{
+      margin-bottom: 40px;
+    }
     .build-wrap{
-      flex-direction: column;
+      flex-wrap: wrap;
       min-height: 370vh;
       margin: 0 0 0 0;
     }
@@ -1008,16 +767,26 @@ h1{
     .contact-form{
       min-height: 100vh;
       width: 90%;
-      margin-left: 41px;
+      margin-left: 0 0 0 0;
     }
     .suit-display-back{
-      margin: -290px 0 0 0;
+      margin: -200px 0 0 -246px;
+    }
+    .suit-display-front{
+      margin-left: -246px;
     }
     .suit-display-img img{
-      margin:-73px 0 0 16px;
+      top: -37px;
+      left: -34px;
     }
     .suit-display-back-images{
       display: flex;
       margin:-161px 0 0 33px;
+    }
+    #suit-titles-back{
+      position: absolute;
+    }
+    #fthisfinbackimage{
+      margin-left: 21px;
     }
   }
